variables.RunFour.scala.error
Erreur de compilation :
RunFour:5: error: ';' expected but ',' found.
    a=a+1,
         ^